# mochitto

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client/: audio_player.py  audio_recorder.py  config.py  main.py  music_player.py  server_client.py  wake_word.py
docs/superpowers/plans/: 2026-03-14-mochitto-implementation.md
docs/superpowers/specs/: 2026-03-14-mochitto-design.md
scripts/: generate_error_audio.py  install-service.sh  mochitto-client@.service
server/: config.py  main.py
server/api/: voice.py
server/devices/: switchbot.py
server/services/: llm.py  oauth.py  stt.py  tts.py
tests/: conftest.py
tests/client/: test_audio_recorder.py  test_music_player.py  test_server_client.py
tests/server/: test_config.py
tests/server/api/: test_voice.py
tests/server/devices/: test_switchbot.py
tests/server/services/: test_llm.py  test_oauth.py  test_stt.py  test_tts.py
